--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "eslint": "^8.33.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "gh-pages": "^5.0.0",
         "prettier": "^2.8.0",
         "prettier-plugin-svelte": "^2.8.1",
         "svelte": "^3.54.0",
@@ -31,6 +32,6 @@
     },
     "type": "module",
     "dependencies": {
-        "gh-pages": "^5.0.0"
+        "jspdf": "^2.5.1"
     }
 }
