--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -3,6 +3,20 @@
     "file": "internal/immutable/assets/_page-613182c9.css",
     "src": "_page.css"
   },
+  "_preload-helper-41c905a7.js": {
+    "file": "internal/immutable/chunks/preload-helper-41c905a7.js"
+  },
+  ".svelte-kit/generated/client-optimized/nodes/1.js": {
+    "file": "internal/immutable/chunks/1-4ee23369.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "_shared-23917130.js": {
+    "file": "internal/immutable/chunks/shared-23917130.js"
+  },
   "node_modules/@sveltejs/kit/src/runtime/components/layout.svelte": {
     "file": "internal/immutable/components/layout.svelte-e921b5ba.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/layout.svelte",
@@ -11,34 +25,8 @@
       "_index-cdb4327e.js"
     ]
   },
-  "_preload-helper-41c905a7.js": {
-    "file": "internal/immutable/chunks/preload-helper-41c905a7.js"
-  },
   "__layout-da46b06b.js": {
     "file": "internal/immutable/chunks/_layout-da46b06b.js"
-  },
-  "_singletons-0dad6b15.js": {
-    "file": "internal/immutable/chunks/singletons-0dad6b15.js",
-    "imports": [
-      "_index-cdb4327e.js"
-    ]
-  },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "internal/immutable/components/error.svelte-7229724e.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-cdb4327e.js",
-      "_singletons-0dad6b15.js"
-    ]
-  },
-  ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "internal/immutable/chunks/1-79ba394f.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
     "file": "internal/immutable/chunks/0-46fa76b9.js",
@@ -50,11 +38,27 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "internal/immutable/chunks/2-60056e0d.js",
+    "file": "internal/immutable/chunks/2-7e841669.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-633e55b6.js"
+      "__page-2e0f54b0.js"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "internal/immutable/components/error.svelte-df13a53a.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-cdb4327e.js",
+      "_singletons-a73f5014.js"
+    ]
+  },
+  "_singletons-a73f5014.js": {
+    "file": "internal/immutable/chunks/singletons-a73f5014.js",
+    "imports": [
+      "_index-cdb4327e.js",
+      "_shared-23917130.js"
     ]
   },
   "_index-cdb4327e.js": {
@@ -69,22 +73,23 @@
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "internal/immutable/components/pages/_page.svelte-12dff0eb.js",
+    "file": "internal/immutable/components/pages/_page.svelte-3e7a6290.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-cdb4327e.js",
-      "__page-633e55b6.js"
+      "__page-2e0f54b0.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "internal/immutable/start-c6f3a4c8.js",
+    "file": "internal/immutable/start-b799e994.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-cdb4327e.js",
-      "_singletons-0dad6b15.js",
-      "_preload-helper-41c905a7.js"
+      "_singletons-a73f5014.js",
+      "_preload-helper-41c905a7.js",
+      "_shared-23917130.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -97,23 +102,24 @@
     "src": "node_modules/dompurify/dist/purify.es.js",
     "isDynamicEntry": true
   },
+  "node_modules/canvg/lib/index.es.js": {
+    "file": "internal/immutable/chunks/index.es-61398c7e.js",
+    "src": "node_modules/canvg/lib/index.es.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-2e0f54b0.js"
+    ]
+  },
   "node_modules/html2canvas/dist/html2canvas.esm.js": {
     "file": "internal/immutable/chunks/html2canvas.esm-0a33ed42.js",
     "src": "node_modules/html2canvas/dist/html2canvas.esm.js",
     "isDynamicEntry": true
   },
-  "node_modules/canvg/lib/index.es.js": {
-    "file": "internal/immutable/chunks/index.es-df60a0e5.js",
-    "src": "node_modules/canvg/lib/index.es.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-633e55b6.js"
-    ]
-  },
-  "__page-633e55b6.js": {
-    "file": "internal/immutable/chunks/_page-633e55b6.js",
+  "__page-2e0f54b0.js": {
+    "file": "internal/immutable/chunks/_page-2e0f54b0.js",
     "imports": [
       "_index-cdb4327e.js",
+      "_shared-23917130.js",
       "_preload-helper-41c905a7.js"
     ],
     "dynamicImports": [
