--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -3,11 +3,13 @@
     "file": "internal/immutable/assets/_page-e8443103.css",
     "src": "_page.css"
   },
-  "__layout-da46b06b.js": {
-    "file": "internal/immutable/chunks/_layout-da46b06b.js"
-  },
-  "_shared-23917130.js": {
-    "file": "internal/immutable/chunks/shared-23917130.js"
+  ".svelte-kit/generated/client-optimized/nodes/1.js": {
+    "file": "internal/immutable/chunks/1-358d9fb4.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
     "file": "internal/immutable/chunks/0-d97a16ce.js",
@@ -18,8 +20,31 @@
       "node_modules/@sveltejs/kit/src/runtime/components/layout.svelte"
     ]
   },
+  "__layout-da46b06b.js": {
+    "file": "internal/immutable/chunks/_layout-da46b06b.js"
+  },
+  "_singletons-c0e13c9f.js": {
+    "file": "internal/immutable/chunks/singletons-c0e13c9f.js",
+    "imports": [
+      "_shared-517e7532.js"
+    ]
+  },
   "_preload-helper-41c905a7.js": {
     "file": "internal/immutable/chunks/preload-helper-41c905a7.js"
+  },
+  ".svelte-kit/generated/client-optimized/nodes/2.js": {
+    "file": "internal/immutable/chunks/2-f69d9dd9.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-5b71d83f.js"
+    ]
+  },
+  "_shared-517e7532.js": {
+    "file": "internal/immutable/chunks/shared-517e7532.js",
+    "imports": [
+      "_index-773df3fe.js"
+    ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/layout.svelte": {
     "file": "internal/immutable/components/layout.svelte-99a6b9f0.js",
@@ -29,36 +54,22 @@
       "_index-773df3fe.js"
     ]
   },
-  ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "internal/immutable/chunks/2-0688bb7c.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-dfbe2a32.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "internal/immutable/components/error.svelte-9c65f5bf.js",
+    "file": "internal/immutable/components/error.svelte-d9faea5d.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-773df3fe.js",
-      "_singletons-8978acb3.js"
+      "_singletons-c0e13c9f.js"
     ]
   },
-  ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "internal/immutable/chunks/1-ad5e08d0.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
-  },
-  "_singletons-8978acb3.js": {
-    "file": "internal/immutable/chunks/singletons-8978acb3.js",
+  "src/routes/+page.svelte": {
+    "file": "internal/immutable/components/pages/_page.svelte-53b9e49c.js",
+    "src": "src/routes/+page.svelte",
+    "isEntry": true,
     "imports": [
       "_index-773df3fe.js",
-      "_shared-23917130.js"
+      "__page-5b71d83f.js"
     ]
   },
   "_index-773df3fe.js": {
@@ -72,24 +83,20 @@
       "__layout-da46b06b.js"
     ]
   },
-  "src/routes/+page.svelte": {
-    "file": "internal/immutable/components/pages/_page.svelte-a82e1167.js",
-    "src": "src/routes/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-773df3fe.js",
-      "__page-dfbe2a32.js"
-    ]
+  "node_modules/dompurify/dist/purify.es.js": {
+    "file": "internal/immutable/chunks/purify.es-1ffe5759.js",
+    "src": "node_modules/dompurify/dist/purify.es.js",
+    "isDynamicEntry": true
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "internal/immutable/start-92942e66.js",
+    "file": "internal/immutable/start-227b10a0.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-773df3fe.js",
-      "_singletons-8978acb3.js",
+      "_singletons-c0e13c9f.js",
       "_preload-helper-41c905a7.js",
-      "_shared-23917130.js"
+      "_shared-517e7532.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -97,29 +104,24 @@
       ".svelte-kit/generated/client-optimized/nodes/2.js"
     ]
   },
-  "node_modules/dompurify/dist/purify.es.js": {
-    "file": "internal/immutable/chunks/purify.es-1ffe5759.js",
-    "src": "node_modules/dompurify/dist/purify.es.js",
-    "isDynamicEntry": true
-  },
   "node_modules/html2canvas/dist/html2canvas.esm.js": {
     "file": "internal/immutable/chunks/html2canvas.esm-0a33ed42.js",
     "src": "node_modules/html2canvas/dist/html2canvas.esm.js",
     "isDynamicEntry": true
   },
   "node_modules/canvg/lib/index.es.js": {
-    "file": "internal/immutable/chunks/index.es-cb778fb3.js",
+    "file": "internal/immutable/chunks/index.es-f772d427.js",
     "src": "node_modules/canvg/lib/index.es.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-dfbe2a32.js"
+      "__page-5b71d83f.js"
     ]
   },
-  "__page-dfbe2a32.js": {
-    "file": "internal/immutable/chunks/_page-dfbe2a32.js",
+  "__page-5b71d83f.js": {
+    "file": "internal/immutable/chunks/_page-5b71d83f.js",
     "imports": [
       "_index-773df3fe.js",
-      "_shared-23917130.js",
+      "_shared-517e7532.js",
       "_preload-helper-41c905a7.js"
     ],
     "dynamicImports": [
